# Shared_Ollama_Service

./: .editorconfig  .env  .gitignore  .pre-commit-config.yaml  API_STATUS_REPORT.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONTEXT7_COMPLIANCE_REVIEW.md  FASTAPI_FIX_SUMMARY.md  FASTAPI_IMPLEMENTATION_REVIEW.md  IMPROVEMENTS.md  MANIFEST.in  MIGRATION_SUMMARY.md  Makefile  OPTIMIZATION_ANALYSIS.md  PERFORMANCE_MONITORING.md  PROJECT_STRUCTURE.md  README.md  README_STATUS.md  analytics.py  analytics.pyi  config.toml.example  constraints.txt  create_request.py  docker-compose.yml  env.example  monitoring.py  monitoring.pyi  performance_logging.py  pyproject.toml  requirements.txt  resilience.py  resilience.pyi  run_vlm_test.py  shared_ollama_client.py  shared_ollama_client.pyi  shared_ollama_client_async.py  shared_ollama_client_async.pyi  structured_logging.py  test_api_streaming.py  (+9 more)
.cursor/: settings.json
.gemini/tmp/5bb35cc71b2c48e001f024367a07cd29c5931219aaf89be8fec89fda78cb0b21/: vlm_request.json
.github/workflows/: ci.yml  release.yml
config/: model_profiles.yaml  models.yaml
docs/: ADDITIONAL_OPPORTUNITIES.md  API_IMPLEMENTATION.md  API_REFERENCE.md  API_WRAPPER_PROPOSAL.md  ARCHITECTURE.md  AUTO_REFACTORING_SUMMARY.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CLEAN_ARCHITECTURE_REFACTORING.md  CLIENT_GUIDE.md  CONFIGURATION.md  CUSTOM_CODE_ANALYSIS.md  DEPENDENCY_INJECTION_OPTIONS.md  DEPENDENCY_INJECTION_SOLUTION.md  DEPENDENCY_INJECTION_VIABLE_OPTIONS.md  DEVELOPMENT.md  DOCLING_COMPATIBILITY.md  FINAL_OPTIMIZATION_SUMMARY.md  IMPLEMENTED_ENHANCEMENTS.md  INTEGRATION_GUIDE.md  LITELLM_GUIDE.md  MIGRATION_GUIDE.md  MODEL_STORAGE.md  MONITORING.md  OPERATIONS.md  PACKAGE_SUGGESTIONS.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_DATA_COLLECTED.md  POML_GUIDE.md  PYTHON_313_IMPROVEMENTS.md  PYTHON_313_MODERNIZATION.md  README.md  RESOURCE_MANAGEMENT.md  SCALING_AND_LOAD_TESTING.md  STABILITY_PLAN.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_PLAN.md  TEST_AUDIT_SUMMARY.md  TEST_FIXES_NEEDED.md  TEST_IMPLEMENTATION_COMPLETE.md  (+6 more)
docs/archive/: ENHANCEMENTS.md  IMPLEMENTATION_COMPLETE.md
examples/: quick_start.py
examples/poml/: README.md  analyze_image.poml  chat_with_tools.poml  extract_event.poml  weather_assistant.py
scripts/: async_load_test.py  calculate_memory_limit.sh  ci_check.sh  cleanup.sh  detect_system.sh  disable_homebrew_ollama.sh  generate_optimal_config.sh  health_check.sh  install_native.sh  performance_report.py  preload_models.sh  reinstall_miniconda.sh  setup.sh  setup_launchd.sh  shutdown.sh  start.sh  start_api.sh  status.sh  verify_setup.sh  view_analytics.py  warmup_models.sh
scripts/core/: cleanup.sh  shutdown.sh  start.sh  status.sh  verify_setup.sh
scripts/diagnostics/: async_load_test.py  ci_check.sh  health_check.sh  view_analytics.py
scripts/lib/: model_config.sh
scripts/maintenance/: calculate_memory_limit.sh  fine_tune_helper.py  install_native.sh  preload_models.sh  warmup_models.sh
src/shared_ollama/: __init__.py
src/shared_ollama/api/: __init__.py  debug_middleware.py  dependencies.py  error_handlers.py  http_errors.py  lifespan.py  limits.py  mappers.py  middleware.py  models.py  response_builders.py  server.py  type_guards.py  validators.py
src/shared_ollama/api/routes/: __init__.py  agents.py  batch.py  chat.py  embeddings.py  generation.py  models.py  system.py  vlm.py
src/shared_ollama/application/: __init__.py  batch_use_cases.py  interfaces.py  use_cases.py  vlm_use_cases.py
src/shared_ollama/client/: __init__.py  async_client.py  async_client.pyi  embeddings.py  sync.py  sync.pyi
src/shared_ollama/core/: __init__.py  config.py  model_cleanup.py  ollama_manager.py  queue.py  resilience.py  resilience.pyi  utils.py  utils.pyi
src/shared_ollama/data/pdl/: text_chat_template.json  vlm_insights_template.json
src/shared_ollama/domain/: __init__.py  entities.py  exceptions.py  value_objects.py
src/shared_ollama/infrastructure/: __init__.py  adapters.py  config.py  health_checker.py  image_cache.py  image_processing.py  response_cache.py
src/shared_ollama/telemetry/: __init__.py  analytics.py  analytics.pyi  metrics.py  metrics.pyi  performance.py  performance.pyi  structured_logging.py
tests/: TEST_AUDIT_COMPLETE.md  TEST_AUDIT_SUMMARY.md  __init__.py  conftest.py  helpers.py  run_vlm_test.py  test_api_server.py  test_async_client.py  test_client.py  test_dependency_injection_options.py  test_domain_entities.py  test_fine_tune_helper.py  test_image_cache.py  test_image_load_full.py  test_image_processing.py  test_integration.py  test_mappers.py  test_model_config.py  test_model_validation.py  test_modernization.py  test_ollama_manager.py  test_ollama_native_openai.py  test_queue.py  test_resilience.py  test_response_builders.py  test_scripts.py  test_scripts_smoke.py  test_telemetry.py  test_use_cases.py  test_utils.py
typings/circuitbreaker/: __init__.pyi
