[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-ollama-service"
version = "2.0.0"
description = "Unified Ollama client library with dedicated text and VLM endpoints"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "slowapi>=0.1.9,<1.0.0",  # Rate limiting
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",  # Configuration management
    "Pillow>=10.0.0,<11.0.0",  # Image processing for VLM
]

[project.optional-dependencies]
async = [
    "httpx>=0.27.0,<0.28.0",
]
dev = [
    "ruff>=0.14.4,<0.15.0",
    "pyright>=1.1.407,<1.2.0",
    "pytest>=9.0.0,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"shared_ollama" = ["**/*.pyi"]

# Ruff Configuration - Modern Python Linter & Formatter
[tool.ruff]
# Target Python 3.13+
target-version = "py313"
line-length = 100
indent-width = 4

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "logs",
    "*.egg-info",
]

# Enable preview features for latest Ruff capabilities
preview = true

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
    "PERF",   # Perflint
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "TCH",    # flake8-type-checking
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PD",     # pandas-vet
    "PL",     # Pylint
    "TRY",    # tryceratops
    "NPY",    # NumPy-specific rules
    "RSE",    # flake8-raise
    "A",      # flake8-builtins
    "S",      # flake8-bandit
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "S101",   # Use of assert detected (common in tests)
    "PLR0913", # Too many arguments (allow for flexible APIs)
    "PLR0912", # Too many branches (allow for complex logic)
    "PLR0915", # Too many statements (allow for comprehensive functions)
]

# Allow automatic fixes for all enabled rules
fixable = ["ALL"]
unfixable = []

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports allowed in __init__.py
"tests/**/*.py" = ["S101", "S106", "S108"]  # Allow asserts and hardcoded temp in tests
"examples/**/*.py" = ["E402"]  # Allow imports not at top in examples

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["shared_ollama"]
combine-as-imports = true
split-on-trailing-comma = true
force-single-line = false

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings
convention = "google"

[tool.ruff.lint.flake8-quotes]
# Use double quotes for strings (consistent with Black)
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"
avoid-escape = true

[tool.ruff.lint.flake8-type-checking]
# Strict type checking mode
strict = true

[tool.ruff.format]
# Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

# Pyright Configuration - Type Checking
[tool.pyright]
# Type checking mode: off, basic, standard, strict
typeCheckingMode = "standard"

# Python version
pythonVersion = "3.13"

# Include/exclude paths
include = ["src/shared_ollama", "examples"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "logs",
]

# Report settings
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportUnusedFunction = "warning"
reportUnusedClass = "warning"
reportGeneralTypeIssues = "error"
reportInvalidTypeForm = "error"
reportMissingParameterType = "warning"

# Type inference settings
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
analyzeUnannotatedFunctions = true

# Experimental features for Python 3.13+
enableExperimentalFeatures = true

