[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-ollama-service"
version = "2.0.0"
description = "Unified Ollama client library with dedicated text and VLM endpoints"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0,<3.0.0",
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<0.40.0",
    "gunicorn>=22.0.0,<24.0.0",  # Production ASGI server with process management
    "slowapi>=0.1.9,<0.2.0",  # Rate limiting
    "pydantic>=2.9.0,<3.0.0",  # Keep major version constraint (v3 would be breaking)
    "pydantic-settings>=2.5.0,<3.0.0",  # Keep major version constraint (v3 would be breaking)
    "Pillow>=10.0.0,<12.0.0",  # Image processing for VLM
    "tenacity>=8.2.0,<9.0.0",  # Retry logic with exponential backoff
    "circuitbreaker>=2.0.0,<3.0.0",  # Circuit breaker pattern
    "cachetools>=5.3.0,<6.0.0",  # LRU cache with TTL support
    "psutil>=5.9.0,<6.0.0",  # Cross-platform process management
]

[project.optional-dependencies]
async = [
    "httpx>=0.27.0,<0.29.0",
]
dev = [
    "ruff>=0.4.0,<0.5.0",
    "pyright>=1.1.407,<1.2.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-asyncio>=0.23.0,<0.24.0",
]
production = [
    "supervisor>=4.2.0,<5.0.0",  # Alternative process manager (optional)
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"shared_ollama" = ["**/*.pyi"]

# Ruff Configuration - Modern Python Linter & Formatter
[tool.ruff]
# Target Python version
target-version = "py311"
line-length = 100
indent-width = 4

# Enable preview features only if needed
preview = false

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "logs",
    "*.egg-info",
]
extend-exclude = ["tests"]

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "PLE", # pylint errors
    "PLR", # pylint refactor
    "RUF", # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "PLR0913", # Too many arguments (allow for flexible APIs)
    "PLR0915", # Too many statements (allow for comprehensive functions)
]
# Allow automatic fixes for all enabled rules
fixable = ["ALL"]
unfixable = []

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports allowed in __init__.py
"tests/**/*.py" = ["S101", "PLR2004", "B008"]  # Allow asserts, magic numbers, DI patterns in tests
"examples/**/*.py" = ["E402"]  # Allow imports not at top in examples

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["shared_ollama"]
combine-as-imports = true
split-on-trailing-comma = true
force-single-line = false

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings
convention = "google"

[tool.ruff.lint.flake8-quotes]
# Use double quotes for strings (consistent with Black)
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"
avoid-escape = true

[tool.ruff.lint.flake8-type-checking]
# Strict type checking mode
strict = true

[tool.ruff.format]
# Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

# Pyright Configuration - Type Checking
[tool.pyright]
# Type checking mode: off, basic, standard, strict
typeCheckingMode = "standard"

# Python version
pythonVersion = "3.13"

# Include/exclude paths
include = ["src/shared_ollama", "examples"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "logs",
]

# Report settings
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportUnusedFunction = "warning"
reportUnusedClass = "warning"
reportGeneralTypeIssues = "error"
reportInvalidTypeForm = "error"
reportMissingParameterType = "warning"

# Type inference settings
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
analyzeUnannotatedFunctions = true

# Experimental features for Python 3.13+
enableExperimentalFeatures = true

